added count and categories subcategories

--- a/app/assets/stylesheets/ads/ads.sass
+++ b/app/assets/stylesheets/ads/ads.sass
@@ -85,6 +85,7 @@ section.ads
     &-images
       padding: 0 0 15px 0
       text-align: center
+      background: $white
       img
         object-fit: cover
         width: 100%
@@ -158,3 +159,6 @@ section.ads
         text-align: center
         background: $orange
         color: $white
+.ads-count
+  color: $orange
+  margin: 0 4px
