--- a/app/assets/stylesheets/shared/shared.sass
+++ b/app/assets/stylesheets/shared/shared.sass
@@ -155,3 +155,7 @@ body
       background: $green
     &-archival
       background: $purple
+  .green
+    color: $green
+  .orange
+    color: $orange
