--- a/app/views/admin/ads/index.html.slim
+++ b/app/views/admin/ads/index.html.slim
@@ -4,6 +4,9 @@
     = render 'admin/shared/admin_content_header'
     .admin-content-body
       h1 Список объявлений
+      = link_to "#{fa_icon('user-plus', text: 'Добавить обьявление')}".html_safe, new_admin_ad_path, class: 'link__grey link__grey_green'
+      br
+      br
       .container-table
         table.table-admin
           thead
