--- a/app/views/admin/users/_form.html.slim
+++ b/app/views/admin/users/_form.html.slim
@@ -1,4 +1,4 @@
-.form
+.form.form-admin
   = simple_form_for [:admin, @user] do |f|
     = f.error_notification
     = f.input :avatar, label: 'Аватар'
