--- a/app/views/categories/_category_item.html.slim
+++ b/app/views/categories/_category_item.html.slim
@@ -6,3 +6,4 @@
       = link_to "#{image_tag 'folder.svg'}".html_safe, category_path(item)
   .category-item__name
     = link_to item.name, category_path(item)
+    span.ads-count = ads_count(item)
