--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -6,6 +6,8 @@
 @import "shared/notice";
 @import "shared/header";
 @import "shared/navigation";
+@import "shared/table";
+@import "shared/form";
 @import "shared/footer";
 @import "home/search";
 @import "home/home";
