added my account

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,6 +14,8 @@
 @import "categories/categories";
 @import "subcategories/subcategories";
 @import "ads/ads";
+@import "myaccount/shared";
+@import "myaccount/ads";
 
 //admin
 @import "admin/shared/shared";
