--- a/app/assets/stylesheets/shared/variables.sass
+++ b/app/assets/stylesheets/shared/variables.sass
@@ -11,6 +11,8 @@ $blue_dark: rgb(24,94,200)
 $purple: rgb(103,56,182)
 $yellow: rgb(255,215,0)
 $purple_dark: rgb(32,25,50)
+$grey: rgb(249,249,249)
+$grey_dark: rgb(228,228,228)
 
 //admin colors
 $admin_background: rgb(244,246,249)
