added ui to myaccount

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -9,6 +9,7 @@
 @import "shared/table";
 @import "shared/form";
 @import "shared/footer";
+@import "shared/buttons";
 @import "home/search";
 @import "home/home";
 @import "categories/categories";
