--- a/app/assets/stylesheets/myaccount/shared.sass
+++ b/app/assets/stylesheets/myaccount/shared.sass
@@ -30,8 +30,9 @@
         color: $orange
         &:hover
           color: $green
-          transition: .3s all ease
+          transition: .1s all ease
           background: $grey
+          box-shadow: 0.3em 0.3em 3px rgba(122,122,122,0.5)
       i
         padding-left: 5px
         font-size: 1.5em
