--- a/app/assets/stylesheets/shared/shared.sass
+++ b/app/assets/stylesheets/shared/shared.sass
@@ -11,6 +11,8 @@ body
     &-table
       width: 100%
       overflow-x: auto
+  .text-grey
+    color: $font_grey
   h1
     font-size: 2em
     margin-bottom: 15px
