--- a/app/assets/stylesheets/shared/table.sass
+++ b/app/assets/stylesheets/shared/table.sass
@@ -19,10 +19,11 @@ table.table-admin
     border: 1px solid $light_grey
     padding: 6px 6px
     max-width: 500px
+    vertical-align: middle
   .table__td-size_sm
     max-width: 150px
-  .table__td-size_344
-    max-width: 344px
+  .table__td-size_400
+    max-width: 400px
   .table__td-size_md
     max-width: 300px
   .table__td-size_lg
