--- a/app/assets/stylesheets/myaccount/ads.sass
+++ b/app/assets/stylesheets/myaccount/ads.sass
@@ -6,6 +6,15 @@
     @include flexbox()
     border: 1px solid $grey
     margin: 15px
+    padding: 10px
+    &-title
+      @include flexbox()
+      @include justify-content(space-between)
+      font-size: 1.5em
+      padding: 0 0 10px 15px
+      min-width: 743px
+    &-actions
+      padding: 0 0 10px 15px
   &-link
     padding: 15px 0 0 15px
     a
