--- a/app/views/myaccount/ads/_form.html.slim
+++ b/app/views/myaccount/ads/_form.html.slim
@@ -5,6 +5,10 @@
     = f.input :text, label: 'Текст'
     = f.input :price, label: 'Цена в грн.'
     = f.input :main_image, label: 'Главная картинка', input_html: { class: 'input-file'}
+    - if @ad.main_image.attached?
+      = image_tag @ad.main_image.variant(resize: "120x120"), class: 'img-thumbnail'
+    - else
+      = image_tag 'no_image.png', style: 'max-height: 120px', class: 'img-thumbnail'
     = f.input :image_1, label: 'Первая картинка', input_html: { class: 'input-file' }
     = f.input :image_2, label: 'Вторая картинка', input_html: { class: 'input-file' }
     = f.input :image_3, label: 'Третья картинка', input_html: { class: 'input-file' }
