--- a/app/assets/stylesheets/shared/shared.sass
+++ b/app/assets/stylesheets/shared/shared.sass
@@ -13,9 +13,18 @@ body
       overflow-x: auto
   .text-grey
     color: $font_grey
+  .auth-form
+    margin: 15px auto
+    padding: 15px
+    width: 300px
+    border: 1px solid $line_grey
+    text-align: center
+    box-shadow: 0.3em 0.3em 3px rgba(122, 122, 122, 0.2)
   h1
     font-size: 2em
     margin-bottom: 15px
+  h2
+    font-size: 1.8em
   .text-center
     text-align: center
   .link__grey
