--- a/app/views/ads/_ad_item.html.slim
+++ b/app/views/ads/_ad_item.html.slim
@@ -48,5 +48,5 @@
               span.ad__item-user-phone-text#phone-block-link Номер телефона
             .ad__item-user-phone-number#phone-block
               span#phone-block-link-hidden = item.user.phone if item.user.phone.present?
-          .ad__item-user-send-msg
+          //.ad__item-user-send-msg
             | Написать автору
