--- a/app/views/categories/show.html.slim
+++ b/app/views/categories/show.html.slim
@@ -10,3 +10,4 @@
     .container
       .ads__content
         = render partial: 'ads/ads_item', collection: @ads, as: :item
+  = render 'shared/footer'
