--- a/app/assets/stylesheets/shared/shared.sass
+++ b/app/assets/stylesheets/shared/shared.sass
@@ -25,6 +25,8 @@ body
     margin-bottom: 15px
   h2
     font-size: 1.8em
+  h3
+    font-size: 1.5em
   .text-center
     text-align: center
   .link__grey
