Added gem kaminari

--- a/app/views/admin/ads/index.html.slim
+++ b/app/views/admin/ads/index.html.slim
@@ -65,4 +65,6 @@
                   = link_to '', edit_admin_ad_path(ad), class: 'fas fa-edit table__icon table__icon_blue'
                   = link_to '', admin_ad_path(ad), data: { confirm: 'Are you sure?' }, method: :delete, remote: true, class: 'fas fa-trash table__icon table__icon_red'
       br
+        = paginate @ads
+      br
       = link_to "#{fa_icon('user-plus', text: 'Добавить обьявление')}".html_safe, new_admin_ad_path, class: 'link__grey link__grey_green'
