Update UI pagination

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,6 +17,7 @@
 @import "ads/ads";
 @import "myaccount/shared";
 @import "myaccount/ads";
+@import "shared/pagination";
 
 //admin
 @import "admin/shared/shared";
