--- a/app/views/admin/shared/_admin_navigation.html.slim
+++ b/app/views/admin/shared/_admin_navigation.html.slim
@@ -5,7 +5,7 @@
       - if current_user.avatar.attached?
         span.admin-navigation-user-info__avatar = image_tag current_user.avatar.variant(resize: "36x36!")
       - else
-        span.admin-navigation-user-info__avatar = image_tag 'user_no_avatar'
+        span.admin-navigation-user-info__avatar = image_tag("user_no_avatar.png")
       - if current_user.first_name.present? && current_user.last_name.present?
         span #{current_user.first_name} #{current_user.last_name}
       - else
