--- a/app/views/shared/_navigation.html.slim
+++ b/app/views/shared/_navigation.html.slim
@@ -1,5 +1,5 @@
 .navigation
-  .navigation-logo = image_tag 'test_logo'
+  .navigation-logo = image_tag("test_logo.png")
   .navigation-content
     .navigation-menu
       = link_to 'Главная', root_path
